# proyecto1

./: README.md
flag_robot/: CMakeLists.txt  package.xml
flag_robot/config/: gaz_ros2_ctl_use_sim.yaml  gazebo_params.yaml  joystick_params.yaml  my_controllers.yaml  nav2_params.yaml  twist_mux.yaml
flag_robot/description/: camera.xacro  gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
flag_robot/launch/: bringup.launch.py  joystick.launch.py  nav2.launch.py  online_async_slam.launch.py  ros2_control.launch.py  rplidar.launch.py  rsp.launch.py  rviz.launch.py  sim.launch.py  sim_nav.launch.py  slam.launch.py
flag_robot/rviz/: map_view.rviz  nav_view.rviz  slam_demo.rviz  view_robot.rviz
flag_robot/worlds/: Test.world
